--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     --VeryDarkBlue: hsl(233, 47%, 7%);
     --DarkDesaturatedBlue: hsl(244, 38%, 16%);
     --SoftViolet: hsl(277, 64%, 61%);
-    --Layer: rgba(110, 30, 160, .6);
+    --Layer: rgba(110, 30, 160, 0.5);
     --White: hsl(0, 0%, 100%);
     --SlightlyTransparentP: hsla(0, 0%, 100%, 0.75);
     --SlightlyTransparentH: hsla(0, 0%, 100%, 0.6);
@@ -57,6 +57,7 @@ h1 {
     font-size: 1.8em;
     font-family: 'Inter', sans-serif;
     height: 115px;
+    letter-spacing: 1px;
 }
 span{
     color: var(--SoftViolet);
@@ -75,13 +76,18 @@ p {
 }
 .amount{
     font-weight: 700;
-    font-size: 1.45em;
+    font-size: 1.5em;
     color: var(--White);
+    letter-spacing: 1.5px;
+    font-family: 'Inter', sans-serif;
 }
 .concept{
     text-transform: uppercase;
     font-size: .8em;
     margin-bottom: 33px;
+    color: var(--SlightlyTransparentP);
+    letter-spacing: 1.5px;
+    font-family: 'Inter', sans-serif;
 }
 .last{
     text-transform: uppercase;
@@ -115,11 +121,13 @@ p {
         background-image: url(/images/image-header-desktop.jpg);
     }
     .section2{
-        padding: 75px 70px;
+        width: 570px;
+        padding: 75px 72px;
+        margin-right: 10px;
         text-align: left;
     }
     h1{
-        font-size: 2.5em;
+        font-size: 2.25em;
     }
     p{
         margin-right: 70px;
@@ -127,6 +135,6 @@ p {
     .stats{
         display: flex;
         justify-content: space-between;
-        margin-left: 70px;
+        margin-right: 70px;
     }
 }
