--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ p {
     }
     
     h1{
-        margin: 0;
+        margin: 12px 0;
         margin-left: 12px;
         width: 390px;
         height: auto;
